--- a/Recycle.html
+++ b/Recycle.html
@@ -10,102 +10,98 @@
 </head>
 
 <body>
+    <div class="parallax">
 
-    <main>
-        <header>
-            <h1 class="title">Recycling in Otago</h1>
-        </header>
-        <nav>
-            <a class="button" href="index.html">Index</a>
-            <a class="button" href="waste-reduction.html">Reduce your footprint</a>
-            <a class="button" href="Landfill.html">Landfills</a>
-            <a class="button" href="Recycle.html">Recycle</a>
-            <a class="button" href="E-Waste.html">E-Waste</a>
-            <a class="button" href="Quiz.html">Quiz</a>
-        </nav>
-        <h2>How to recycle</h2>
-        <h3>Home Recycling</h3>
-        <p>Want to learn how to recycle properly, your in the right place! This page will provide information regarding
-            where you can </p>
+        <main>
+            <header>
+                <h1>Green Otago</h1>
+            </header>
+            <nav>
+                <a class="button" href="index.html">Index</a>
+                <a class="button" href="Recycle.html">Recycle</a>
+                <a class="button" href="Reduce.html">Reduce </a>
+                <a class="button" href="E-Waste.html">E-Waste</a>
+                <a class="button" href="Landfill.html">Landfills</a>
+                <a class="button" href="Quiz.html">Quiz</a>
+            </nav>
+            <div class="recycle-lead">
+                <h2>Recycling in Otago</h2>
+                <p>There are two different bins at home used for personal recycling. A yellow bin and a blue bin, below
+                    you can
+                    see what can and cant go in each bin. </p>
+            </div>
+            <section class="Recycle-container">
+                <div class="Recycle-do">
+                    <!--Recyleable Section/ Do section-->
+                    <h2>Recycle!</h2>
+                    <h3>These items do go in the blue bin!</h3>
+                    <ul class="can-glass">
+                        <li>Beverage Bottle</li>
+                        <li>Food Bottles</li>
+                        <li>Jars</li>
+                    </ul>
+                    <h3>Yellow Bins</h3>
+                    <ul class="can-yellow">
+                        <li>Plastic Bottles and Containers</li>
+                        <li>Cardboard Boxes</li>
+                        <li>Aluminium Tins and Cans</li>
+                        <li>Books and News papers</li>
+                    </ul>
 
-        <section class="redbin-container">
-            <h3 class="redbin-intro">What cant be recycled?</h3>
-            <p class="leadbox1">Not everything can be recycled. The waste below should go into red topped whille bins or
-                rubish
-                bags
-            </p>
-            <ul class="unrecycleables">
-                <li class="unrecycleables-item">Plastics bags!</li>
-                <li class="unrecycleables-item">Food Scraps</li>
-                <li class="unrecycleables-item">Green Waste</li>
-                <li class="unrecycleables-item">Diapers</li>
-                <li class="unrecycleables-item">Clothes</li>
-                <li class="unrecycleables-item">Metal</li>
-            </ul>
-            <img class="greenbin" src="images/greentop.jpg" alt="Greentop">
+                    <h2>Remember to!</h2>
+                    <ul class="remeber-to">
+                        <li>Rinse out jars, containers and tins</li>
+                        <li>Flatten Cardboard</li>
+                        <li>Keep lids on bottles</li>
+                        <li>Remove covers off of books</li>
+                    </ul>
+                </div>
+                <!--Unecyleable Section/ Dont section-->
+                <div class="Recycle-dont">
+                    <h2>Dont Recycle!</h2>
+                    <h3>The blue bin cant take these</h3>
+                    <ul class="dont-blue">
+                        <li>Broken Glass</li>
+                        <li>Windows</li>
+                        <li>Mirrors</li>
+                        <li>Cups and other glassware</li>
+                    </ul>
+                    <h3>Yellow bins dont take</h3>
+                    <ul class="dont-yellow">
+                        <li>Electronics</li>
+                        <li>Plastic Bags</li>
+                        <li>Batteries</li>
+                        <li>Metal</li>
+                        <li>Glass</li>
+                        <li>Clothing</li>
+                        <li>Polystyrene or milk cartons</li>
+                        <li>Medical Waste</li>
+                    </ul>
+                    <h2>Dont!</h2>
+                    <ul class="dont-list">
+                        <li>Bend or crush cans</li>
+                        <li>Leave food in jars or containers</li>
+                        <li>Seperate caps from bottles</li>
+                        <li>Bundle recycleables in plastics bags</li>
+                    </ul>
+                    </ul>
+                </div>
+            </section>
+            <h2>What do i do with my medical waste?</h2>
+            <p>Any sryngies or medication can be handed into you local pharmacy where it can be properly disposed
+                of.</p>
+            <h2>How do i dispose of my electronics?</h2>
+            <p>Electronics can only be recyled at landfills equiped to deal with electronic waste. Consult our page
+                on <a href="">E-waste</a> for more information</p>
+            <footer>
+                <script>
+                    var date = document.lastModified;
+                    document.write("Last Modified: " + date);
+                </script>
+            </footer>
+        </main>
 
-
-
-        </section>
-        <div class="recycle-glass1">
-            <p>What goes in the blue bin? </p>
-            <ul>
-                <li>Beverage Bottles</li>
-                <li>Food Bottles</li>
-                <li>Jars</li>
-            </ul>
-            <img src="images/glass.jpg" alt="">
-        </div>
-        <div>
-            <h4>What glass cant i recycle?</h4>
-            <p>Some glass has had chemicals added to the glass. This makes it impossible to use in the glass
-                recycleing
-                proccess.</p>
-            <h4>Unrecycleable glass</h4>
-            <ul>
-                <li>Frosted Glass</li>
-                <li>Drinking Glasses</li>
-                <li>Mirrors</li>
-            </ul>
-        </div>
-        <div>
-            <h3>Yellow bins</h3>
-            <p>Yellow bins are used to recycle a wide varity of waste. These lists should give you a general idea of
-                what
-                you can and cant recycle.</p>
-            <h4>I eat!</h4>
-            <ul>
-                <li>Hard Plastics</li>
-                <li>CardBoard Boxes</li>
-                <li>Tins and Cans</li>
-                <li>Paper</li>
-            </ul>
-        </div>
-        <div>
-            <h4>I hate!</h4>
-
-        </div>
-        <h4>Getting them ready for recycleing</h4>
-        <p>All glass should be rinsed and cleaned of any remaining contents</p>
-
-
-        <h3>Public Recycling</h3>
-        <h4>Bins</h4>
-        <p>Around Otago you will find bins that allow you to recycle your plastic and glass. <strong>You cannot
-                empty
-                your personal bins here.</strong> </p>
-        <img src="images/public.jpg" alt="">
-        <h4>Bottle Banks</h4>
-        <p>Large bottle banks are avalible. These can be used if you have a mountan of beer bottles overflowing from
-            your blue bins.</p>
-        <img src="images/bottlebank.jpg" alt="">
-
-        <footer>
-            Author: Nicholas Marr
-            Ref: Dunedin City Councel Website
-        </footer>
-    </main>
-
+    </div>
 </body>
 
 </html>
