--- a/index.html
+++ b/index.html
@@ -3,31 +3,69 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 
 <body>
+    <div class="parallax">
+        <main>
+            <header>
+                <h1>Green Otago</h1>
+            </header>
+            <nav>
+                <a class="button" href="index.html">Index</a>
+                <a class="button" href="Recycle.html">Recycle</a>
+                <a class="button" href="Reduce.html">Reduce </a>
+                <a class="button" href="E-Waste.html">E-Waste</a>
+                <a class="button" href="Landfill.html">Landfills</a>
+                <a class="button" href="Quiz.html">Quiz</a>
+            </nav>
+            <section class="index-container">
+                <div class="home-set1">
+                    <a href="Recycle.html">
+                        <img class="home-image" src="images/recycle-home.jpg" alt="Glass Bin">
+                    </a>
+                    <div class="home-image1-text">Recylcing</div>
+                </div>
+                <div class="home-set2">
+                    <a href="Reduce.html">
+                        <img class="home-image" src="images/bike-home.jpg" alt="Biker">
+                    </a>
+                    <div class="home-image2-text">Be more enviromentaly freindly</div>
+                </div>
+                <div class="home-set3">
+                    <a href="E-Waste.html">
+                        <img class="home-image" src="images/e-waste-home.jpg" alt="Electronic Waste">
+                    </a>
+                    <div class="home-image3-text">E-Waste</div>
+                </div>
+                <div class="home-set4">
+                    <a href="Landfill.html">
+                        <img class="home-image" src="images/landfill-home.jpg" alt="Landfill">
+                    </a>
+                    <div class="home-image4-text">Find a landfill</div>
+                </div>
+                <div class="home-set5">
+                    <a href="Quiz.html">
+                        <img class="home-image" src="images/quiz.jpg" alt="Quiz">
+                    </a>
+                </div>
+            </section>
 
+            <footer>
+                <script>
+                    var date = document.lastModified;
+                    document.write("Last Modified: " + date);
+                </script>
+            </footer>
+        </main>
 
-    <main>
-        <header>
-            <h1 class="title">Recycling in Otago</h1>
-        </header>
-        <nav>
-            <a class="button" href="index.html">Index</a>
-            <a class="button" href="waste-reduction.html">Reduce your footprint</a>
-            <a class="button" href="Landfill.html">Landfills</a>
-            <a class="button" href="Recycle.html">Recycle</a>
-            <a class="button" href="E-Waste.html">E-Waste</a>
-            <a class="button" href="Quiz.html">Quiz</a>
-        </nav>
-    </main>
+    </div>
     <footer>
-        Author: Nicholas Marr
-    </footer>
+
 </body>
 
 </html>
